# expense_tracker

./: .env.example  .gitignore  OCR_TESTING.md  PRD_CN_langchain.md  README.md  owners.json  pyproject.toml
scripts/: diagnose_ocr.py  run_acceptance.bat  show_items.py  test_acceptance.py  test_e2e.py  test_parser_debug.py  test_parser_quick.py  test_qwen_receipt_prompt.py  view_results.py
src/: README.md
src/expense_tracker/: __init__.py  cli.py  config.py  llm_client.py  models.py  ocr_client.py  ocr_parser.py  qwen_receipt_extractor.py  receipt_step1.py  services.py  storage.py  tracing.py
src/expense_tracker/automation/: __init__.py  ingest_jobs.py  report_jobs.py
src/expense_tracker/gui/: __init__.py  app.py  services.py
src/expense_tracker/pipelines/: __init__.py  receipt_ingestion.py  receipt_postprocess.py  receipt_validation.py  retry_policy.py
src/expense_tracker/prompts/: __init__.py  receipt_prompt.py
src/expense_tracker/reports/: __init__.py  monthly.py
src/expense_tracker/schemas/: __init__.py  converters.py  domain.py  enums.py  extraction.py  owners.py
src/expense_tracker/storage/: __init__.py  artifacts.py  directory_flow.py  file_index.py  json_store.py
tests/: test_business_rules_phase2.py  test_cli_add.py  test_cli_reports.py  test_gui_services.py  test_ingest_jobs.py  test_owner_recognition.py  test_pipelines_unit.py  test_prompts.py  test_receipt_pipeline.py  test_report_jobs.py  test_reports.py  test_reports_unit.py  test_schemas.py  test_storage.py
